--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -5,10 +5,10 @@
     </HEAD>
     <BODY>
         <H1>States</H1>
-        <ul>
-            {% for state in states %}
-                <li>{{ state.id }}: <b>{{ state.name}} </b></li>
-            {% endfor %}
-        </ul>
+        <UL>
+        {% for states in states %}
+            <LI>{{state.id}}: <B>{{state.name}}</B></LI>
+        {% endfor %}
+        </UL>
     </BODY>
 </HTML>
