--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
@@ -6,15 +7,15 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for state in states|sort(attribute='name')%} 
-            <LI>{{state.id}}: <B>{{state.name}}</B></LI>
-                <UL>
-                    {% for city in state.cities|sort(attribute='name')%} 
-                        <LI>{{city.id}}}}: <B>{{city.name}}</B></LI>
-                    {% endfor %}
-                </UL>
-            </LI>
-        {% endfor %}
-        </UL>
+		{% for state in states|sort(attribute='name') %}
+		    <LI>{{ state.id }}: <B>{{ state.name }}</B>
+			    <UL>
+			    {% for city in state.cities|sort(attribute='name') %}
+			        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+			    {% endfor %}
+		        </UL>
+		    </LI>
+	    {% endfor %}
+	    </UL>
     </BODY>
 </HTML>
