--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,21 +1,27 @@
-
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
+	{% if tal cosa %}
         <H1>States</H1>
         <UL>
 		{% for state in states|sort(attribute='name') %}
-		    <LI>{{ state.id }}: <B>{{ state.name }}</B>
-			    <UL>
-			    {% for city in state.cities|sort(attribute='name') %}
-			        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-			    {% endfor %}
-		        </UL>
-		    </LI>
-	    {% endfor %}
-	    </UL>
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+		{% endfor %}
+        </UL>
+	{% elif %}
+
+		<H1>State: {{State.id}}</H1>
+		<H3>Cities:</H3>
+		<UL>
+		{% for city in state.cities|sort(attribute='name') %}
+			<LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+		{% endfor %}
+		</UL>
+	{% else %}
+		<H1>Not found!</H1>
+	{% endif %}
     </BODY>
 </HTML>
